# businessight

./: docker-compose.yml  fix_summary.txt  test_sqlalchemy_stream.py
backend/: .dockerignore  Dockerfile  README.md  architecture.md  asgi.py  db.sqlite3  main.py  manage.py  pyproject.toml
backend/BusinessSight/: celery.py  settings.py  urls.py  wsgi.py
backend/analytics/: api.py  constants.py  models.py  prompts.py  schemas.py  services.py  tasks.py
backend/analytics/api/: __init__.py  config.py  history.py  prompts.py  query.py  router.py
backend/analytics/management/commands/: seed_data.py
backend/analytics/migrations/: 0001_initial.py  0002_queryhistory.py  0003_queryhistory_sql_query.py  0004_queryhistory_session_id.py  0005_queryhistory_execution_time.py  0006_queryhistory_is_deleted.py  0007_queryhistory_estimated_cost_and_more.py  0008_queryhistory_has_data.py  0009_savedprompt.py  0010_queryhistory_task_id.py  0011_alter_savedprompt_name_alter_savedprompt_sql_command.py  0012_queryhistory_agent_trace.py  0013_queryhistory_result_blocks.py  0014_delete_sale_queryhistory_thinking_steps_and_more.py  0015_runwaretasklog.py  0016_add_raw_response_text_to_runwaretasklog.py
backend/analytics/models/: __init__.py  prompt.py  query.py  sale.py
backend/analytics/services/: __init__.py  agent.py  cache.py  core.py  db.py  llm_config.py  logger.py  prompts.py  security.py  sql_utils.py  status.py  tokens.py  tools.py
backend/analytics/services/agent/: __init__.py  answer_verifier.py  data_validator.py  report_generator.py  (+3 more)
backend/scratch/: check_inspector.py
(+121 files in other folders)
